--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DudnikovMov</string>
+    <string name="tap_btn">Нажмите на кнопку для перехода</string>
 </resources>
